# maccas-api

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  README.md  TODO.md  \  api.config.toml  api.rs  api_types.rs  application.yaml  config.json  docker-compose.prod.yml  docker-compose.yml  duplicates.js  generate_entity.sh  local_deploy_all.sh  main.rs  openapi.json  renovate.json  restart.sh  sample-config.json
accounts-cli/: Cargo.toml
accounts-cli/files/: first_names.txt  preferences.json  subscriptions.json
accounts-cli/src/: main.rs
api/: Cargo.toml  build.rs  fly.toml
api/config/: local.toml
api/entity/src/: accounts.rs  jobs.rs  mod.rs  offer_details.rs  offers.rs
api/src/: discord_webhook.rs  error.rs  gql_tracing.rs  lib.rs  macros.rs  main.rs  settings.rs  types.rs
api/src/caching/: mod.rs
api/src/config/: mod.rs
api/src/event_manager/: mod.rs
api/src/events/: mod.rs
api/src/graphql/: handler.rs  mod.rs  tracing.rs
api/src/jobs/: activate_account.rs  activate_existing_account.rs  create_account.rs  error.rs  generate_recommendations.rs  job_executor.rs  mod.rs  refresh.rs  save_images.rs  shared.rs
api/src/routes/: create_event.rs  get_events.rs  mod.rs
base/: Cargo.toml
base/src/: constants.rs  feature_flag.rs  http.rs  jwt.rs  lib.rs  maccas.rs  retry.rs  settings.rs  shutdown.rs  tracing.rs
base/src/account_manager/: mod.rs
base/src/delay_queue/: heap_entry.rs  mod.rs  queue.rs
batch/: Cargo.toml  fly.toml
batch/src/: error.rs  jwt.rs  lib.rs  main.rs  settings.rs  types.rs
batch/src/jobs/: account_unlock.rs  activate_account.rs  activate_existing_account.rs  categorise_offers.rs  create_account.rs  error.rs  generate_recommendations.rs  job_scheduler.rs  mod.rs  preload_products.rs  recategorise_offers.rs  refresh.rs  save_images.rs
batch/src/routes/: health.rs  jobs.rs  mod.rs
caching/: Cargo.toml  build.rs
caching/src/: lib.rs
converters/: Cargo.toml
converters/src/: lib.rs  offers.rs  points.rs  utils.rs
dynamodb-migration/: Cargo.toml
dynamodb-migration/src/: main.rs
event/: Cargo.toml  fly.toml
event/src/: error.rs  jwt.rs  lib.rs  main.rs  result_extension.rs  settings.rs  state.rs
event/src/event_manager/: mod.rs
event/src/events/: mod.rs
event/src/jobs/: account_unlock.rs  activate_account.rs  categorise_offers.rs  error.rs  job_scheduler.rs  mod.rs  recategorise_offers.rs  refresh.rs  save_images.rs  shared.rs
event/src/routes/: create_event.rs  get_events.rs  health.rs  mod.rs
foundation/: Cargo.toml
foundation/src/: constants.rs  hash.rs  lib.rs  log.rs  util.rs
foundation/src/aws/: config.rs  mod.rs
foundation/src/config/: mod.rs
foundation/src/discord/: webhook.rs
foundation/src/extensions/: mod.rs
foundation/src/types/: mod.rs  places.rs  role.rs  sqs.rs
graphql/: Cargo.toml
graphql/src/: macros.rs  main.rs  settings.rs  types.rs
graphql/src/graphql/: guard.rs  handler.rs  mod.rs  tracing.rs
libmaccas/: .gitignore  Cargo.toml
libmaccas-rs/: Cargo.toml
libmaccas-rs/src/: api.rs
libmaccas-rs/src/types/: response.rs
libmaccas/src/: api.rs  api_types.rs  error.rs  lib.rs  types.rs  util.rs
libmaccas/src/types/: request.rs  response.rs
libs/foundation/: Cargo.toml
libs/foundation/src/: constants.rs  either.rs  http.rs  jwt.rs  lib.rs  log.rs
libs/libmaccas-rs/: Cargo.toml
libs/places-rs/: Cargo.toml
maccas/: Cargo.toml  build.rs
maccas-api/api/: Cargo.toml  rustfmt.toml
maccas-api/core/: Cargo.toml
maccas-api/deals/: Cargo.toml
maccas-api/refresh/: Cargo.toml
maccas-bot/: Cargo.toml  sample-config.yml
maccas-bot/src/: api.rs  code.rs  constants.rs  deals.rs  event_handler.rs  location.rs  main.rs  refresh.rs  remove.rs
maccas-core/: Cargo.toml
maccas-core/src/: client.rs  lib.rs  middleware.rs
maccas/src/: config.rs  constants.rs  lib.rs  logging.rs  macro.rs  proxy.rs  rng.rs
migrate-audit/: Cargo.toml
migrate-audit/src/: main.rs
migration/: Cargo.toml  copy-all.sh  fly.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231214_054124_create_offers_table.rs  m20231214_054356_update_offer_id.rs  m20231214_061052_add_offer_proposition_id.rs  m20231214_063221_add_accounts_table.rs  m20231214_080919_add_jobs_table.rs  m20231216_133706_offer_details_table.rs  m20231216_140842_add_fk_offer_details.rs  m20231217_051327_update_field.rs  m20231223_080257_move_fields.rs  m20231223_081714_add_created_and_updated_at.rs  m20231223_111033_add_points.rs  m20231229_104821_remove_image_basename.rs  m20231230_130059_add_refreshed_at.rs  m20231230_133157_add_stores_table.rs  m20240101_063753_rename_field_jobs.rs  m20240101_063943_add_events_table.rs  m20240118_091942_add_job_history.rs  m20240118_105246_add_offer_audit.rs  m20240127_073308_password_is_optional.rs  m20240128_092046_offer_history_table.rs  m20240130_110830_add_json_blob.rs  m20240131_150456_add_products_table.rs  m20240131_153145_add_categories_table.rs  m20240131_160651_add_products_list_to_details.rs  m20240201_090136_custom_categories_list.rs  m20240201_095751_remove_products.rs  m20240201_095903_remove_product_ids_and_add_categories.rs  m20240203_105911_update_categories.rs  m20240203_123115_update_categories_2.rs  m20240204_080304_add_account_lock.rs  m20240204_084509_add_disable_flag.rs  m20240307_122712_add_event_status.rs  m20240430_023736_add_trace_id.rs  m20240504_053110_add_refresh_failure_count.rs  m20240525_113934_add_index_for_iscompleted.rs  m20240525_121202_add_more_index.rs  m20240526_095905_add_pg_stat_statement_extension.rs  m20240706_061027_add_offer_refreshed_at.rs  (+23 more)
places-rs/: Cargo.toml
places-rs/src/: types.rs
queue/: Cargo.toml
queue/src/: lib.rs  main.rs  settings.rs  state.rs
recommendations/: Cargo.toml
recommendations/src/: jwt.rs  lib.rs  main.rs  settings.rs  types.rs
scheduler/: Cargo.toml
scheduler/src/: context.rs  event.rs  macros.rs  main.rs  settings.rs
types/: Cargo.toml
types/src/: api.rs  bot.rs  jwt.rs  lib.rs  maccas.rs  places.rs  user.rs
web/: .env  (+17 more)
(+725 files in other folders)
