[workspace]
resolver = "2"
members = [
    "graphql",
    "migration",
    "libmaccas",
    "places",
    "openai",
    "batch",
    "base",
    "event", 
    "sensordata/lib", "recommendations", 
]

[workspace.package]
rust-version = "1.85.0"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[workspace.dependencies]
async-graphql = { version = "7.0.15", features = [
    "uuid",
    "chrono",
    "dataloader",
    "log",
    "opentelemetry",
    "tracing",
] }

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rand = "0.9.0"
chrono = "0.4.39"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.30.0"

sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "postgres-vector",
    "runtime-tokio-native-tls",
    "macros",
] }

anyhow = "1.0.95"

config = "0.15.8"

entity = { path = "./entity" }
libmaccas = { path = "./libmaccas" }
places = { path = "./places" }
openai = { path = "./openai" }
base = { path = "./base" }
recommendations = { path = "./recommendations" }
converters = { path = "./converters" }
event = { path = "./event" }
batch = { path = "./batch" }
sensordata = { path = "./sensordata/lib" }

thiserror = "2.0.11"
futures = "0.3.31"
futures-util = "0.3.31"

reqwest = { version = "0.12", features = ["json", "gzip", "native-tls", "blocking"] }
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
reqwest-tracing = { version = "0.5", features = ["opentelemetry_0_27"] }

async-trait = "0.1.86"

tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7.13"
cron = "0.15.0"
uuid = { version = "1.13", features = ["v4"] }
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
itertools = "0.14.0"
opentelemetry = "0.29.0"
opentelemetry_sdk = "0.29.0"
http = "1.2.0"
open-feature = "0.2.5"
