[workspace]
resolver = "2"
members = [
    "graphql",
    "migration",
    "libmaccas",
    "places",
    "openai",
    "base",
    "event", 
    "sensordata/lib", 
    "recommendations", "scheduler", 
]

[workspace.package]
rust-version = "1.85.0"

[profile.release-strip]
inherits = "release"
strip = "symbols"

[workspace.dependencies]
async-graphql = { version = "7.0.16", features = [
    "uuid",
    "chrono",
    "dataloader",
    "log",
    "opentelemetry",
    # FIXME:https://github.com/async-graphql/async-graphql/issues/1726
    "tracing"
] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
chrono = "0.4.41"

tracing = "0.1.41"
tracing-attributes = "=0.1.30"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.31.0"

sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "macros",
    "with-uuid",
    "postgres-vector",
    "runtime-tokio-native-tls",
    "macros",
], default-features = false }

anyhow = "1.0.98"

config = "0.15.11"

entity = { path = "./entity" }
libmaccas = { path = "./libmaccas" }
places = { path = "./places" }
openai = { path = "./openai" }
base = { path = "./base" }
recommendations = { path = "./recommendations" }
converters = { path = "./converters" }
event = { path = "./event" }
jobs = { path = "./jobs" }
sensordata = { path = "./sensordata/lib" }

thiserror = "2.0.12"
futures = "0.3.31"
futures-util = "0.3.31"

reqwest = { version = "0.12", features = ["json", "gzip", "native-tls", "blocking"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = { version = "0.7.0", features = ["tracing"] }
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_30"] }

async-trait = "0.1.88"

tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-util = "0.7.15"
cron = "0.15.0"
uuid = { version = "1.17", features = ["v4"] }
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tower = { version = "0.5.2", features = ["load-shed"] }
itertools = "0.14.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
http = "1.3.1"
open-feature = "0.2.5"

[patch.crates-io]
reqwest-tracing = { git = 'https://github.com/TrueLayer/reqwest-middleware' }
reqwest-middleware = { git = 'https://github.com/TrueLayer/reqwest-middleware' }
