[package]
name = "accounts-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
maccas = { path = "../maccas" }
foundation = { path = "../libs/foundation" }
libmaccas = { path = "../libs/libmaccas-rs" }

clap = { version = "4.4.6", features = ["derive"] }
aws-sdk-dynamodb = "0.33.0"
log = "0.4.20"
tokio = { version = "1.33.0", features = ["macros"] }
anyhow = "1.0.75"
serde_json = "1.0.107"
rand = "0.8.5"
titlecase = "2.2.1"
regex = "1.10.2"
imap = "2.4.1"
native-tls = "0.2.11"
mailparse = "0.14.0"
