[package]
name = "accounts-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
maccas = { path = "../maccas" }
foundation = { path = "../libs/foundation" }
libmaccas = { path = "../libs/libmaccas-rs" }

clap = { version = "4.4.10", features = ["derive"] }
aws-sdk-dynamodb = { workspace = true }
log = "0.4.20"
tokio = { version = "1.34.0", features = ["macros"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
rand = "0.8.5"
titlecase = "2.2.1"
regex = "1.10.2"
imap = "2.4.1"
native-tls = "0.2.11"
mailparse = "0.14.0"
