[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = "7.0.0"

axum = { version = "0.7.4", features = ["macros"] }

tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sea-orm = { workspace = true }
anyhow = { workspace = true }

config = { workspace = true }

serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }

entity = { workspace = true }
event = { workspace = true }
libmaccas = { workspace = true }
places = { workspace = true }
async-trait = { workspace = true }
base = { workspace = true }
futures = { workspace = true }
reqwest-middleware = { workspace = true }
