[package]
name = "batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sea-orm = { workspace = true }
anyhow = { workspace = true }

config = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

entity = { workspace = true }
libmaccas = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio-util = "0.7.10"
chrono = { workspace = true }
futures = { workspace = true }
base = { workspace = true }
converters = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
cron = "0.12.0"
