[package]
name = "batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
event = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
entity = { workspace = true }
libmaccas = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base = { workspace = true }
delayqueue = { workspace = true }
recommendations = { workspace = true }
converters = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true }
cron = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
openai = { workspace = true }
itertools = { workspace = true }
sensordata = { workspace = true }
imap = { version = "3.0.0-alpha.15", features = ["native-tls"] }
mailparse = "0.16.0"
regex = "1.11.1"

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

[lib]
name = "batch"
path = "src/lib.rs"

[[bin]]
name = "batch"
path = "src/main.rs"
