[package]
name = "caching"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
base = { workspace = true }
entity = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = "0.14.1"
prost-types = "0.14.1"
redis = { version = "1.0.0", features = ["aio", "tokio-comp", "connection-manager"] }
deadpool-redis = "0.22.0"

[build-dependencies]
prost-build = "0.14.1"
