[package]
name = "converters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmaccas = { workspace = true }
entity = { workspace = true }
sea-orm = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
