[package]
name = "dynamodb-migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
aws-sdk-dynamodb = "1.7.0"
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = { version = "1.35.0", features = ["macros"] }
anyhow = "1.0.75"
serde_json = "1.0.108"
aws-config = "1.1.1"
sea-orm = { workspace = true }
entity = { workspace = true }
chrono = { workspace = true }
