[package]
name = "event"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
actix-web = "4"
futures = { workspace = true }
actix-cors = "0.6.1"
serde_json = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
base = { workspace = true }
config = { workspace = true }
tokio-util = { workspace = true }
entity = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
actix-web-lab = "0.20.1"

[lib]
name = "event"
path = "src/lib.rs"

[[bin]]
name = "event"
path = "src/main.rs"
