[package]
name = "foundation"
version = "0.45.0"
edition = "2021"
publish = false

[features]
default = []
aws = [
    "dep:aws-config",
    "dep:aws-sdk-s3",
    "dep:aws-sdk-sqs",
    "dep:aws-sdk-secretsmanager",
]

http = [
    "dep:http",
    "dep:reqwest",
    "dep:reqwest-retry",
    "dep:reqwest-middleware",
    "dep:reqwest-tracing",
]

discord = ["dep:twilight-model", "dep:mime"]
jwt = ["dep:aliri", "dep:aliri_oauth2", "dep:aliri_clock", "dep:jwt"]

[dependencies]
# aws
aws-config = { version = "0.55.3", optional = true }
aws-sdk-s3 = { version = "0.28.0", optional = true }
aws-sdk-sqs = { version = "0.28.0", optional = true }
aws-sdk-secretsmanager = { version = "0.28.0", optional = true }

# http
http = { version = "0.2.9", optional = true }
reqwest = { version = "0.11.18", optional = true }
reqwest-retry = { version = "0.2.2", optional = true }
reqwest-middleware = { version = "0.2.2", optional = true }
reqwest-tracing = { version = "0.4.5", optional = true }

# discord
twilight-model = { version = "0.15.2", optional = true }
mime = { version = "0.3.17", optional = true }

# jwt
aliri = { version = "0.6.2", optional = true }
aliri_oauth2 = { version = "0.10.0", optional = true }
aliri_clock = { version = "0.1.4", optional = true }
jwt = { version = "0.16.0", optional = true }

# types
serde_json = { version = "1.0.100" }

rust-crypto = "0.2.36"
lazy_static = "1.4.0"
uuid = { version = "1.4.0", features = ["v4"] }
anyhow = "1.0.71"
log = "0.4.19"
fern = "0.6.2"
serde = "1.0.171"
config = "0.13.3"
async-trait = "0.1.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
