[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# aws
aws-config = { version = "0.56.0" }
aws-sdk-s3 = { version = "0.29.0" }
aws-sdk-sqs = { version = "0.29.0" }
aws-sdk-secretsmanager = { version = "0.29.0" }

# http
http = { version = "0.2.9" }
reqwest = { version = "0.11.20" }
reqwest-retry = { version = "0.2.2" }
reqwest-middleware = { version = "0.2.3" }
reqwest-tracing = { version = "0.4.6" }

# discord
twilight-model = { version = "0.15.2" }
mime = { version = "0.3.17" }

# jwt
aliri = { version = "0.6.2" }
aliri_oauth2 = { version = "0.10.0" }
aliri_clock = { version = "0.1.4" }
jwt = { version = "0.16.0" }

# types
serde_json = { version = "1.0.105" }
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
anyhow = "1.0.75"
log = "0.4.20"
fern = "0.6.2"
serde = "1.0.185"
config = "0.13.3"
async-trait = "0.1.73"
rust-crypto = "0.2.36"
