[package]
name = "graphql"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = "7.0.17"
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-futures = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
entity = { workspace = true }
event = { workspace = true }
caching = { workspace = true }
recommendations = { workspace = true }
libmaccas = { workspace = true }
places = { workspace = true }
async-trait = { workspace = true }
base = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
axum-tracing-opentelemetry = "0.30.0"
geoutils = "0.5.1"
