[package]
name = "libmaccas"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "McDonald's API Client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }
uuid = { version = "1.13.1", features = ["v4"] }
http = { workspace = true }
reqwest-middleware = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
