[package]
name = "maccas-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }

serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.10"
config = { version = "0.13.1", features = ["yaml"] }
serde = "1.0.126"
serde_json = "1.0.79"
serde_derive = "1.0.136"
log = "0.4"
simplelog = "0.12.0"
http = "0.2.7"
itertools = "0.10.3"
chrono = "0.4.19"
oauth2 = "4.2.0"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
async-trait = "0.1.53"
task-local-extensions = "0.1.1"
