[package]
name = "maccas-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
http = "0.2.7"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
async-trait = "0.1.53"
log = "0.4"
task-local-extensions = "0.1.1"
reqwest-tracing = "0.2.2"
simplelog = "0.12.0"
