[package]
name = "maccas"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
libmaccas = { path = "../libmaccas-rs" }
places = { path = "../places-rs" }

lambda_runtime = "0.8.1"
lambda_http = "0.8.1"
aws-sdk-dynamodb = "0.29.0"
aws-sdk-s3 = "0.29.0"
aws-types = "0.56.0"
aws-sdk-sqs = "0.29.0"
aws-sdk-secretsmanager = "0.29.0"

serde = "1.0.183"
serde_json = "1.0.105"
serde_derive = "1.0.181"
serde_dynamo = { version = "4.2.4", features = ["aws-sdk-dynamodb+0_28"] }
strum_macros = "0.25"

twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }

rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"

jwt = "0.16.0"
aliri_oauth2 = "0.10.0"

image = "0.24.7"
webp = "0.2.5"

# accounts
regex = "1.9.3"
imap = "2.4.1"
native-tls = "0.2.11"
mailparse = "0.14.0"

openssl = { version = "0.10", features = ["vendored"] }
foundation = { path = "../foundation" }
config = { version = "0.13.3", features = ["yaml"] }
uuid = { version = "1.4.1", features = ["v4", "v7"] }
http = "0.2.9"
chrono = "0.4.26"
reqwest = { version = "0.11.18", features = ["json", "gzip"] }
reqwest-middleware = "0.2.3"
tokio-stream = "0.1.14"
log = "0.4.20"
async-trait = "0.1.73"
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.11.0"
tokio = "1.31.0"
anyhow = "1.0.74"
utoipa = { version = "3.4.4", features = ["rocket_extras"] }
lazy_static = "1.4.0"
futures = "0.3.28"
strum = { version = "0.25.0", features = ["derive"] }
graph-rs-sdk = "1.1.1"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "rustc", "git", "gitoxide"] }

# [patch.crates-io]
# libmaccas = { path = "/home/anurag/Projects/libmaccas-rs" }

[lib]
name = "maccas"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "refresh"
path = "src/bin/refresh.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[[bin]]
name = "images"
path = "src/bin/images.rs"

[[bin]]
name = "refresh-failure"
path = "src/bin/refresh_failure.rs"
