[package]
name = "maccas"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
libmaccas = { path = "../libs/libmaccas-rs" }
places = { path = "../libs/places-rs" }
foundation = { path = "../libs/foundation" }

lambda_runtime = "0.8.2"
lambda_http = "0.8.1"
aws-sdk-dynamodb = "0.33.0"
aws-sdk-s3 = "0.33.0"
aws-types = "0.56.1"
aws-sdk-sqs = "0.33.0"
aws-sdk-secretsmanager = "0.33.0"

serde = "1.0.190"
serde_json = "1.0.107"
serde_derive = "1.0.190"
serde_dynamo = { version = "4.2.7", features = ["aws-sdk-dynamodb+0_33"] }
strum_macros = "0.25"

twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }

rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
rocket_cors = "0.6.0-alpha2"

jwt = "0.16.0"
aliri = { version = "0.6.2" }
aliri_oauth2 = { version = "0.10.0" }
aliri_clock = { version = "0.1.4" }

image = "0.24.7"
webp = "0.2.6"

# accounts
regex = "1.10.2"
imap = "2.4.1"
native-tls = "0.2.11"
mailparse = "0.14.0"

openssl = { version = "0.10", features = ["vendored"] }
config = { version = "0.13.3", features = ["yaml"] }
uuid = { version = "1.5.0", features = ["v4", "v7"] }
http = "0.2.9"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
reqwest-middleware = "0.2.4"
reqwest-tracing = { version = "0.4.6" }
tokio-stream = "0.1.14"
log = "0.4.20"
async-trait = "0.1.74"
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.11.0"
tokio = "1.33.0"
anyhow = "1.0.75"
utoipa = { version = "4.0.0", features = ["rocket_extras", "uuid"] }
lazy_static = "1.4.0"
futures = "0.3.29"
strum = { version = "0.25.0", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
rust-argon2 = "2.0"
bcrypt = "0.15.0"
qrcode-generator = "4.1.9"

[build-dependencies]
vergen = { version = "8.2.5", features = ["build", "rustc", "git", "gitoxide"] }


[lib]
name = "maccas"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "refresh"
path = "src/bin/refresh.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[[bin]]
name = "images"
path = "src/bin/images.rs"

[[bin]]
name = "refresh-failure"
path = "src/bin/refresh_failure.rs"

[[bin]]
name = "jwt"
path = "src/bin/jwt.rs"
