[package]
name = "maccas"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
libmaccas = { path = "../libs/libmaccas-rs" }
places = { path = "../libs/places-rs" }
foundation = { path = "../libs/foundation" }

lambda_runtime = "0.8.3"
lambda_http = "0.8.3"
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }

serde ={ workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
serde_dynamo = { workspace = true }

strum_macros = "0.25"

rocket = { workspace = true }

jwt = "0.16.0"
aliri = { version = "0.6.2" }
aliri_oauth2 = { version = "0.10.0" }
aliri_clock = { version = "0.1.4" }

image = "0.24.7"
webp = "0.2.6"

# accounts
regex = "1.10.2"
imap = "2.4.1"
native-tls = "0.2.11"
mailparse = "0.14.0"

openssl = { version = "0.10", features = ["vendored"] }
config = { version = "0.13.3", features = ["yaml"] }
uuid = { version = "1.6.1", features = ["v4", "v7"] }
http = "0.2.11"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
reqwest-middleware = "0.2.4"
reqwest-tracing = { version = "0.4.6" }
tokio-stream = "0.1.14"
log = "0.4.20"
async-trait = "0.1.74"
rand = { version = "0.8.5", features = ["small_rng"] }
itertools = "0.12.0"
tokio = "1.34.0"
anyhow = "1.0.75"
utoipa = { version = "4.1.0", features = ["rocket_extras", "uuid"] }
lazy_static = "1.4.0"
futures = "0.3.29"
strum = { version = "0.25.0", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.8"
rust-argon2 = "2.0"
bcrypt = "0.15.0"
qrcode-generator = "4.1.9"
async-recursion = "1.0.5"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "rustc", "git", "gitoxide"] }


[lib]
name = "maccas"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "refresh"
path = "src/bin/refresh.rs"

[[bin]]
name = "cleanup"
path = "src/bin/cleanup.rs"

[[bin]]
name = "images"
path = "src/bin/images.rs"

[[bin]]
name = "refresh-failure"
path = "src/bin/refresh_failure.rs"

[[bin]]
name = "jwt"
path = "src/bin/jwt.rs"
