[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
maccas = { path = "../maccas" }
aws-sdk-dynamodb = "0.29.0"
foundation = { path = "../foundation" }
log = "0.4.20"
tokio = { version = "1.31.0", features = ["macros"] }
anyhow = "1.0.72"
serde_json = "1.0.104"
