[package]
name = "places"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = "1.0.180"
serde_json = "1.0.104"
serde_derive = "1.0.171"

reqwest = { version = "0.11.18", features = ["json", "gzip"] }
reqwest-middleware = "0.2.2"
http = "0.2.9"
tracing = "0.1.37"
thiserror = "1.0.44"
