[package]
name = "places"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = "1.0.183"
serde_json = "1.0.105"
serde_derive = "1.0.183"

reqwest = { version = "0.11.18", features = ["json", "gzip"] }
reqwest-middleware = "0.2.3"
http = "0.2.9"
tracing = "0.1.37"
thiserror = "1.0.46"
