[package]
name = "queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
actix-web = "4"
futures = { workspace = true }
actix-cors = "0.6.1"
serde_json = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
