[package]
name = "recommendations"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
entity = { workspace = true }
libmaccas = { workspace = true }
openai = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
base = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
itertools = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
linfa = "0.7.1"
linfa-clustering = "0.7.1"
ndarray = "0.16.0"

[lib]
name = "recommendations"
path = "src/lib.rs"

[[bin]]
name = "recommendations"
path = "src/main.rs"
